# EulerSweepModeler

./: CMakeLists.txt  README.md
src/: Edge.h  EulerOps.cpp  EulerOps.h  EulerOpsTest.cpp  Face.h  HalfEdge.h  Render.cpp  Solid.h  Sweep.cpp  Sweep.h  Vertex.h  test.cpp
